# datasets-evaluator-backend

./: README.md  manage.py  pyproject.toml
apiservice/: admin.py  apps.py  exceptions.py  models.py  urls.py  views.py
apiservice/clients/: re3data_client.py
apiservice/management/commands/: update_repositories.py
apiservice/migrations/: 0001_initial.py
apiservice/services/: data_transformer.py  database_controller.py
evaluator_backend/: asgi.py  settings.py  urls.py  wsgi.py
