[tool.poetry]
name = "evaluator-backend"
version = "0.1.0"
description = ""
authors = ["sucholbluk <sucholbiaklukasz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
