[tool.poetry]
name = "evaluator_backend"
version = "0.1.0"
description = ""
authors = ["sucholbluk <sucholbiaklukasz@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.7"
xmltojson = "^2.0.3"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
